--- a/TradeSimulator/TradeSimulator.csproj
+++ b/TradeSimulator/TradeSimulator.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbstractFeedProvider.cs" />
     <Compile Include="DataFeed.cs" />
     <Compile Include="FeedQueue.cs" />
     <Compile Include="CSVFeedProvider.cs" />
