--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ TradeCharm/obj/Debug/TradeCharm.exe
 TradeCharm/obj/Debug/TradeCharm.pdb
 .vs/TradeCharm/v14/.suo
 TradeCharm/obj/Debug/TradeCharm.csprojResolveAssemblyReference.cache
+.vs/TradeCharm/v14/.suo
